[package]
name = "idmouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net"] }
toml = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
